# cockroachdb-examples

./: .gitignore  create_db.sh  docker-compose.yml  drop_db.sh
go/: go.mod  go.sum
go/cmd/: main.go
go/cmd/subcommand/: delete.go  insert.go  join.go  select.go
go/models/: models.go
migrations/: create_db.sql
rust/: Cargo.toml
rust/migrations/00000000000000_diesel_initial_setup/: up.sql
rust/src/: cmd.rs  db.rs  main.rs  models.rs  schema.rs
