[package]
name = "cockroachdb-examples"
version = "0.0.1"
authors = ["Kanchi Shimono <dev.kanchi.shimono@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "uuidv07"] }
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["v4"] }
log = "0.4.11"
env_logger = "0.7.1"
structopt = "0.3.16"
